--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 #base path
-# hoidanit.upload-file.base-uri=file:///D:/1.Udemy/Backend/4.%20Java%20Spring%20Restful/upload/
+test.upload-file.base-uri=C:/Users/ASUS/Documents/Project webbanhang/upload/
 # ###
 
 ###
@@ -45,11 +45,10 @@ spring.data.web.pageable.one-indexed-parameters=true
 # spring.mail.host=smtp.gmail.com
 # spring.mail.port=587
 
-#thay email của bạn vào đây
-# spring.mail.username=ads.hoidanit@gmail.com
+# spring.mail.username=ads.tranquochoan@gmail.com
 
 #thay app password của bạn vào đây
-# spring.mail.password=jkokycjcioaaveii
+# spring.mail.password=
 # spring.mail.properties.mail.smtp.auth=true
 # spring.mail.properties.mail.smtp.starttls.enable=true
 ###
